<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="country_news">sa</string>

    <string name="app_name">Saudi Arabia news</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="back_drop">Back drop</string>
    <string name="top_shadow">Top shadow</string>
    <string name="bottom_shadow">Bottom shadow</string>
    <string name="news_for_you">News for you</string>
    <string name="subtitle">Subtitle</string>
    <string name="title_of_news">Title of News</string>
    <string name="a_time_ago">a time ago</string>
    <string name="ic_date">Ic date</string>
    <string name="error_title">Error Title</string>
    <string name="error_message">Error Message</string>
    <string name="retry">Retry</string>
    <string name="author">Author</string>
    <string name="_01_january_1994">01 January 1994</string>
    <string name="title">Title</string>
    <string name="desc">Desc</string>
    <string name="source">Source</string>
    <string name="time">Time</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="open_with_browser">Open with browser</string>
    <string name="no_result">No Result</string>
    <string name="please_try_again">Please Try Again!</string>
    <string name="oops">Oops..</string>
    <string name="network_failure">Network failure, Please Try Again</string>
    <string name="query_hint">Search Latest News...</string>
    <string name="type_more_than_two_letters">Type more than two letters!</string>
    <string name="share_from_the_news_app">Share from the News App</string>
    <string name="share_with">Share with :</string>
    <string name="sorry_cannot_be_share">Hmm.. Sorry,  Cannot be share</string>
</resources>
